--- a/modules/lib/mavelous_web/style.css
+++ b/modules/lib/mavelous_web/style.css
@@ -62,6 +62,14 @@ html {
   width: 170px;
 }
 
+#video {
+	position: absolute;
+	width: 640px;
+	height: 480px;
+	background: white;
+	bottom: 0px;
+	right: 0px;
+}
 .controls {
     float: right;
 }
